added contact page

--- a/give.html
+++ b/give.html
@@ -15,7 +15,7 @@
                     <a href="give.html">Give a Critique</a>
                     <a href="receive.html">Receive a Critique</a>
                     <a href="shared.html">Shared Words</a>
-                    <a href="receive.html">Contact</a>
+                    <a href="contact.html">Contact</a>
             </div>
             <span class="menu-btn" onclick="openNav()">&#9776; Menu</span>
         <div>
