fixed formatting in shared words

--- a/shared.html
+++ b/shared.html
@@ -4,6 +4,7 @@
         <title>Shared Words</title>
         <link rel="stylesheet" href="assets/css/main.css" />
         <link rel="stylesheet" href="assets/css/shared.css" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 
     <body>
@@ -30,8 +31,16 @@
                 <section>
                         <div class="receive-btn-container">
                             <button type="button" class="collapsible" id="0">
-                                    <h4>Notice the &nbsp;&nbsp;&nbsp;&nbsp; Notice the</h4>
-                                    <h3>Objective / Subjective</h3>
+                                <div class="collapse-grid">
+                                    <div class="col">
+                                        <h4>Notice the</h4>
+                                        <h3>Objective</h3>
+                                    </div>
+                                    <div class="col">
+                                        <h4>Notice the</h4>
+                                        <h3>Subjective</h3>
+                                    </div>
+                                </div>
                                 </button>
                                 <div class="content">
                                     <p>
@@ -55,8 +64,16 @@
                                     </p>
                             </div>
                             <button type="button" class="collapsible" id="1">
-                                    <h3>Opinion / Authority</h3>
-                                    <h4>Is easy &nbsp;&nbsp;&nbsp;&nbsp; Is earned &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h4>
+                                <div class="collapse-grid">
+                                    <div class="col">
+                                        <h3>Opinion</h3>
+                                        <h4>Is easy</h4>
+                                    </div>
+                                    <div class="col">
+                                        <h3>Authority</h3>
+                                        <h4>Is earned</h4>
+                                    </div>
+                                </div>
                                 </button>
                                 <div class="content">
                                     <p>
@@ -79,8 +96,16 @@
                                     </p>
                             </div>
                             <button type="button" class="collapsible" id="2">
-                                    <h3>Critical / Cynical</h3>
-                                    <h4>Can help &nbsp;&nbsp;&nbsp;&nbsp; Doesn't &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h4>
+                                <div class="collapse-grid">
+                                    <div class="col">
+                                        <h3>Critical</h3>
+                                        <h4>Can help</h4>
+                                    </div>
+                                    <div class="col">
+                                        <h3>Cynical</h3>
+                                        <h4>Doesn't</h4>
+                                    </div>
+                                </div>
                                 </button>
                                 <div class="content">
                                     <p>
@@ -96,8 +121,15 @@
                                     </p>
                             </div>
                             <button type="button" class="collapsible" id="3">
-                                    <h3>Critique / Direction</h3>
-                                    <h4>Know which you are giving</h4>
+                                <div class="collapse-grid">
+                                    <div class="col">
+                                        <h3>Critique</h3>
+                                    </div>
+                                    <div class="col">
+                                        <h3>Direction</h3>
+                                    </div>
+                                </div>
+                                <h4 style="text-align: center;">Know which you are giving</h4>
                                 </button>
                                 <div class="content">
                                     <p>
