small spacing changes

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
         <div>
             <div class="page-container">
             <!-- Header-->
-            <h1>CONTACT</h1>
+            <h1 style="margin-bottom: 3%;">CONTACT</h1>
             <section id="caption">
                 <p style="line-height: 150%;">
                         Want to get in touch?</br> Please send your questions, comments, 
