resized poster images

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="link-group">
                     <div>
                         <a href="give.html">
-                            <img src="assets/giveposter.jpg" alt="Give a Critique" width="100%" height="100%">
+                            <img src="assets/small-give.jpg" alt="Give a Critique" width="100%" height="100%">
                         </a>
                         <div class="desc">
                             <h4>How to Give a Critique</h4>
@@ -47,7 +47,7 @@
                                 <button class="button" onclick="window.location.href = 'give.html';"><span><p>Check it Out</p></span></button>
                         </div>
                         <a href="receive.html">
-                            <img src="assets/receiveposter.jpg" alt="Receive a Critique" width="100%" height="100%">
+                            <img src="assets/small-receive.jpg" alt="Receive a Critique" width="100%" height="100%">
                         </a>
                         <div class="desc">
                             <h4>How to Receive a Critique</h4>
@@ -59,7 +59,7 @@
                             <button class="button" onclick="window.location.href = 'receive.html';"><span><p>Check it Out</p></span></button>
                         </div>
                         <a href="shared.html">
-                            <img src="assets/sharedposter.jpg" alt="Shared Words" width="100%" height="100%">
+                            <img src="assets/small-share.jpg" alt="Shared Words" width="100%" height="100%">
                         </a>
                         <div class="desc">
                             <h4>Shared Words</h4>
