fixed font sizes for large screens

--- a/shared.html
+++ b/shared.html
@@ -48,7 +48,7 @@
                                         differently. Objective content is often easily agreed upon by both the creator of the work being considered and the person 
                                         delivering the critique. This makes objective content easier to critique without feeling personal - “This work is supposed
                                          to be 10” wide and yours is only 9” wide.” For critiques between people who don’t already have a relationship this is a 
-                                         good “safe”place to start.
+                                         good, “safe” place to start.
                                     </p>
                                     <p>
                                         Subjective content is less concrete and more open for personal interpretation - there’s often no “right” answer. 
