changed shared words to terms of critique

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <div id="nav" class="sidenav">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                     <a href="index.html">Home</a>
+                    <a href="terms.html">Terms of Critique</a>
                     <a href="give.html">Give a Critique</a>
                     <a href="receive.html">Receive a Critique</a>
-                    <a href="shared.html">Shared Words</a>
                     <a href="contact.html">Contact</a>
             </div>
             <span class="menu-btn" onclick="openNav()">&#9776; Menu</span>
@@ -33,6 +33,19 @@
             <section>
                 <div class="link-group">
                     <div>
+                        <a href="terms.html">
+                                <img src="assets/small-share.jpg" alt="Terms of Critique" width="100%" height="100%">
+                            </a>
+                            <div class="desc">
+                                <h4>Terms of Critique</h4>
+                                <p>Giving and receiving feedback works best when those involved use a common language.
+                                    The Terms of Critique present themes and definitions that are important for 
+                                    participants to understand together before engaging in a critique.
+                                </p>
+                            </div>
+                            <div class="center-btn">
+                                <button class="button" onclick="window.location.href = 'terms.html';"><span><p>Check it Out</p></span></button>
+                            </div>
                         <a href="give.html">
                             <img src="assets/small-give.jpg" alt="Give a Critique" width="100%" height="100%">
                         </a>
@@ -57,19 +70,6 @@
                         </div>
                         <div class="center-btn">
                             <button class="button" onclick="window.location.href = 'receive.html';"><span><p>Check it Out</p></span></button>
-                        </div>
-                        <a href="shared.html">
-                            <img src="assets/small-share.jpg" alt="Shared Words" width="100%" height="100%">
-                        </a>
-                        <div class="desc">
-                            <h4>Shared Words</h4>
-                            <p>Giving and receiving feedback works best when those involved use a common language.
-                                The “SHARED WORDS” present themes and definitions that are important for 
-                                participants to understand together before engaging in a critique.
-                            </p>
-                        </div>
-                        <div class="center-btn">
-                            <button class="button" onclick="window.location.href = 'shared.html';"><span><p>Check it Out</p></span></button>
                         </div>
                 </div>
             </section>
