--- a/terms.html
+++ b/terms.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang='en' class="sharedhtml">
+<html lang='en' class="termshtml">
     <head>
-        <title>Shared Words</title>
+        <title>Terms of Critique</title>
         <link rel="stylesheet" href="assets/css/main.css" />
-        <link rel="stylesheet" href="assets/css/shared.css" />
+        <link rel="stylesheet" href="assets/css/terms.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 
@@ -12,18 +12,18 @@
             <div id="nav" class="sidenav">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                     <a href="index.html">Home</a>
+                    <a href="terms.html">Terms of Critique</a>
                     <a href="give.html">Give a Critique</a>
                     <a href="receive.html">Receive a Critique</a>
-                    <a href="shared.html">Shared Words</a>
                     <a href="contact.html">Contact</a>
             </div>
             <span class="menu-btn" onclick="openNav()">&#9776; Menu</span>
             <div class="page-container">
                 <!-- Header-->
-                <h1>SHARED WORDS</h1> 
+                <h1>TERMS OF CRITIQUE</h1> 
                 <section id="caption">
                     <h2>
-                        Giving and receiving feedback works best when those involved use a common language. The "SHARED WORDS" below present themes
+                        Giving and receiving feedback works best when those involved use a common language. The Terms of Critique below present themes
                         and definitions that are important for participants to understand together before engaging in a critique.
                     </h2>
                 </section>
