--- a/contact.html
+++ b/contact.html
@@ -12,9 +12,9 @@
             <div id="nav" class="sidenav">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                     <a href="index.html">Home</a>
+                    <a href="terms.html">Terms of Critique</a>
                     <a href="give.html">Give a Critique</a>
                     <a href="receive.html">Receive a Critique</a>
-                    <a href="shared.html">Shared Words</a>
                     <a href="contact.html">Contact</a>
             </div>
             <span class="menu-btn" onclick="openNav()">&#9776; Menu</span>
