--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,16 @@
     <head>
         <title>How to Critique</title>
         <link rel="stylesheet" href="assets/css/main.css" />
-        <link rel="stylesheet" href="assets/css/index.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 
     <body>
         <div>
-            <div id="nav" class="sidenav">
+            <div class="navbar">
+                <a href="index.html">HOW TO CRITIQUE</a>
+                <span class="menu-btn" onclick="openNav()">&#9776;</span>
+            </div>
+                    <div id="nav" class="sidenav">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                     <a href="index.html">Home</a>
                     <a href="terms.html">Terms of Critique</a>
@@ -17,11 +20,10 @@
                     <a href="receive.html">Receive a Critique</a>
                     <a href="contact.html">Contact</a>
             </div>
-            <span class="menu-btn" onclick="openNav()">&#9776; Menu</span>
         <div>
             <div class="page-container">
             <!-- Header-->
-            <h1 style="margin-bottom: 3%;">CONTACT</h1>
+            <h1 style="margin-bottom: 3%;color:black;">CONTACT</h1>
             <section id="caption">
                 <p style="line-height: 150%;">
                         Want to get in touch?</br> Please send your questions, comments, 
