--- a/give.html
+++ b/give.html
@@ -9,7 +9,11 @@
 
     <body>
         <div>
-            <div id="nav" class="sidenav">
+            <div class="navbar">
+                <a href="index.html">HOW TO CRITIQUE</a>
+                <span class="menu-btn" onclick="openNav()">&#9776;</span>
+            </div>
+                    <div id="nav" class="sidenav">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                     <a href="index.html">Home</a>
                     <a href="terms.html">Terms of Critique</a>
@@ -17,7 +21,6 @@
                     <a href="receive.html">Receive a Critique</a>
                     <a href="contact.html">Contact</a>
             </div>
-            <span class="menu-btn" onclick="openNav()">&#9776; Menu</span>
         <div>
             <div class="page-container">
             <!-- Header-->
