--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
         <title>How to Critique</title>
         <link rel="stylesheet" href="assets/css/main.css" />
         <link rel="stylesheet" href="assets/css/index.css" />
+        <link rel="stylesheet" href="assets/css/colors.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 
     <body>
         <div>
-            <div id="nav" class="sidenav">
+            <div class="navbar">
+                <a href="index.html">HOW TO CRITIQUE</a>
+                <span class="menu-btn" onclick="openNav()">&#9776;</span>
+            </div>
+                    <div id="nav" class="sidenav">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                     <a href="index.html">Home</a>
                     <a href="terms.html">Terms of Critique</a>
@@ -17,60 +22,39 @@
                     <a href="receive.html">Receive a Critique</a>
                     <a href="contact.html">Contact</a>
             </div>
-            <span class="menu-btn" onclick="openNav()">&#9776; Menu</span>
         <div>
             <div class="page-container">
             <!-- Header-->
-            <h1>HOW TO CRITIQUE</h1>
+            <h1 style="line-height: 120%;">HOW TO CRITIQUE</h1>
             <section id="caption">
                 <h2>
-                        Good critique is an integral part of a productive design process. Through feedback and constructive dialogue it can help
-                        a designer to refine and develop their work beyond what they might accomplish on their own. This site contains resources
-                        created to assist in the process of critique – we hope they’re helpful.
+                        Here are some tools to help guide your critique. Click on the boxes to learn more.
                 </h2>
             </section>
 
             <section>
-                <div class="link-group">
-                    <div>
+                <div class="box-container">
+                    <div class="box">
                         <a href="terms.html">
-                                <img src="assets/small-share.jpg" alt="Terms of Critique" width="100%" height="100%">
+                                <h2 style="color:var(--terms-text-color);">If you want to learn about</h2>
+                                <h1 style="color:var(--terms-bg-color);">Terms of Critique</h1>
+                                <p style="color:var(--terms-text-color);">+ READ MORE</p>
+                        </a>
+                    </div>
+                    <div class="box">
+                            <a href="give.html">
+                                    <h2 style="color:var(--give-text-color);">If you are about to</h2>
+                                    <h1 style="color:var(--give-bg-color);">Give a Critique</h1>
+                                    <p style="color:var(--give-text-color);">+ READ MORE</p>
                             </a>
-                            <div class="desc">
-                                <h4>Terms of Critique</h4>
-                                <p>Giving and receiving feedback works best when those involved use a common language.
-                                    The Terms of Critique present themes and definitions that are important for 
-                                    participants to understand together before engaging in a critique.
-                                </p>
-                            </div>
-                            <div class="center-btn">
-                                <button class="button" onclick="window.location.href = 'terms.html';"><span><p>Check it Out</p></span></button>
-                            </div>
-                        <a href="give.html">
-                            <img src="assets/small-give.jpg" alt="Give a Critique" width="100%" height="100%">
-                        </a>
-                        <div class="desc">
-                            <h4>How to Give a Critique</h4>
-                            <p>About to give a critique? Here are some points to keep in mind that 
-                                will help you to effectively deliver feedback in a way that is most useful to the 
-                                person whose work you will be responding to.
-                            </p>
-                        </div>
-                        <div class="center-btn">
-                                <button class="button" onclick="window.location.href = 'give.html';"><span><p>Check it Out</p></span></button>
-                        </div>
-                        <a href="receive.html">
-                            <img src="assets/small-receive.jpg" alt="Receive a Critique" width="100%" height="100%">
-                        </a>
-                        <div class="desc">
-                            <h4>How to Receive a Critique</h4>
-                            <p>About to receive a critique? Here are some things to consider before and during the 
-                                interaction that will help you get the most out of the experience.
-                            </p>
-                        </div>
-                        <div class="center-btn">
-                            <button class="button" onclick="window.location.href = 'receive.html';"><span><p>Check it Out</p></span></button>
-                        </div>
+                    </div>
+                    <div class="box">
+                            <a href="receive.html">
+                                    <h2 style="color:var(--receive-text-color);">If you are about to</h2>
+                                    <h1 style="color:var(--receive-bg-color);">Receive a Critique</h1>
+                                    <p style="color:var(--receive-text-color);">+ READ MORE</p>
+                            </a>
+                    </div>
                 </div>
             </section>
   
