--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div>
             <div class="navbar">
                 <a href="index.html">HOW TO CRITIQUE</a>
-                <span class="menu-btn" onclick="openNav()">&#9776;</span>
+                <span onclick="openNav()">&#9776;</span>
             </div>
                     <div id="nav" class="sidenav">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
