capitalization of titles

--- a/give.html
+++ b/give.html
@@ -24,7 +24,7 @@
         <div>
             <div class="page-container">
             <!-- Header-->
-            <h1>HOW TO GIVE A CRITIQUE</h1>
+            <h1>How to Give a Critique</h1>
             <section id="caption">
                 <h2>
                     Prepare yourself to be as helpful as possible. The way you interact with someone else's work can effect how they see it themselves.
