--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div>
             <div class="page-container">
             <!-- Header-->
-            <h1 style="line-height: 120%;">HOW TO CRITIQUE</h1>
+            <h1 style="line-height: 120%;">Tools for Critique</h1>
             <section id="caption">
                 <h2>
                         Here are some tools to help guide your critique. Click on the boxes to learn more.
