--- a/receive.html
+++ b/receive.html
@@ -23,7 +23,7 @@
             </div>
             <div class="page-container">
             <!-- Header-->
-            <h1>HOW TO RECEIVE A CRITIQUE</h1>
+            <h1>How to Receive a Critique</h1>
             <section id="caption">
                 <h2>
                     You're about to receive feedback from someone who is dedicating their time and energy to making your work better. Preparing
