--- a/terms.html
+++ b/terms.html
@@ -23,7 +23,7 @@
             </div>
             <div class="page-container">
                 <!-- Header-->
-                <h1>TERMS OF CRITIQUE</h1> 
+                <h1>Terms of Critique</h1> 
                 <section id="caption">
                     <h2>
                         Giving and receiving feedback works best when those involved use a common language. The Terms of Critique below present themes
