--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div>
             <div class="navbar">
-                <a href="index.html">HOW TO CRITIQUE</a>
+                <a href="index.html">HowToCritique</a>
                 <span onclick="openNav()">&#9776;</span>
             </div>
                     <div id="nav" class="sidenav">
@@ -25,10 +25,10 @@
         <div>
             <div class="page-container">
             <!-- Header-->
-            <h1 style="line-height: 120%;">Tools for Critique</h1>
             <section id="caption">
                 <h2>
-                        Here are some tools to help guide your critique. Click on the boxes to learn more.
+                     A collection of tools to help people give and receive effective critique in order to improve their 
+                    work. 
                 </h2>
             </section>
 
