--- a/give.html
+++ b/give.html
@@ -10,7 +10,7 @@
     <body>
         <div>
             <div class="navbar">
-                <a href="index.html">HOW TO CRITIQUE</a>
+                <a href="index.html">HowToCritique</a>
                 <span class="menu-btn" onclick="openNav()">&#9776;</span>
             </div>
                     <div id="nav" class="sidenav">
