--- a/index.html
+++ b/index.html
@@ -38,21 +38,21 @@
                         <a href="terms.html">
                                 <h2 style="color:var(--terms-text-color);">If you want to learn about</h2>
                                 <h1 style="color:var(--terms-bg-color);">Terms of Critique</h1>
-                                <p style="color:var(--terms-text-color);">+ READ MORE</p>
+                                <p style="color:var(--terms-text-color);">CLICK HERE</p>
                         </a>
                     </div>
                     <div class="box">
                             <a href="give.html">
                                     <h2 style="color:var(--give-text-color);">If you are about to</h2>
                                     <h1 style="color:var(--give-bg-color);">Give a Critique</h1>
-                                    <p style="color:var(--give-text-color);">+ READ MORE</p>
+                                    <p style="color:var(--give-text-color);">CLICK HERE</p>
                             </a>
                     </div>
                     <div class="box">
                             <a href="receive.html">
                                     <h2 style="color:var(--receive-text-color);">If you are about to</h2>
                                     <h1 style="color:var(--receive-bg-color);">Receive a Critique</h1>
-                                    <p style="color:var(--receive-text-color);">+ READ MORE</p>
+                                    <p style="color:var(--receive-text-color);">CLICK HERE</p>
                             </a>
                     </div>
                 </div>
