changes to homepage and navbar

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div>
             <div class="navbar">
-                <a href="index.html">HOW TO CRITIQUE</a>
+                <a href="index.html">HowToCritique</a>
                 <span onclick="openNav()">&#9776;</span>
             </div>
                     <div id="nav" class="sidenav">
@@ -25,10 +25,10 @@
         <div>
             <div class="page-container">
             <!-- Header-->
-            <h1 style="line-height: 120%;">Tools for Critique</h1>
             <section id="caption">
+                <h2 style="color:gray;font-size: 40px;">HowToCritique, n.</h2>
                 <h2>
-                        Here are some tools to help guide your critique. Click on the boxes to learn more.
+                        A collection of tools to help people give and receive effective critique in order to improve their work.
                 </h2>
             </section>
 
@@ -36,24 +36,20 @@
                 <div class="box-container">
                     <div class="box">
                         <a href="terms.html">
-                                <h2 style="color:var(--terms-text-color);">If you want to learn about</h2>
+                                <h2 style="color:var(--terms-text-color);">Click here if you want to learn about</h2>
                                 <h1 style="color:var(--terms-bg-color);">Terms of Critique</h1>
-                                <p style="color:var(--terms-text-color);">+ READ MORE</p>
                         </a>
                     </div>
                     <div class="box">
                             <a href="give.html">
-                                    <h2 style="color:var(--give-text-color);">If you are about to</h2>
+                                    <h2 style="color:var(--give-text-color);">Click here if you are about to</h2>
                                     <h1 style="color:var(--give-bg-color);">Give a Critique</h1>
-                                    <p style="color:var(--give-text-color);">+ READ MORE</p>
                             </a>
                     </div>
                     <div class="box">
                             <a href="receive.html">
-                                    <h2 style="color:var(--receive-text-color);">If you are about to</h2>
-                                    <h1 style="color:var(--receive-bg-color);">Receive a Critique</h1>
-                                    <p style="color:var(--receive-text-color);">+ READ MORE</p>
-                            </a>
+                                    <h2 style="color:var(--receive-text-color);">Click here if you are about to</h2>
+                                    <h1 style="color:var(--receive-bg-color);">Receive a Critique</h1>                            </a>
                     </div>
                 </div>
             </section>
