--- a/guide/index.html
+++ b/guide/index.html
@@ -710,7 +710,7 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid footer py-4 bg-white shadow">
+    <div class="container-fluid footer mt-5 py-4 bg-white shadow">
       <div class="row">
         <div class="container">
           <div class="row py-1">
@@ -719,8 +719,10 @@
           </div>
           <div class="row py-2">
             <div class="col-12 d-flex flex-md-row flex-column align-items-center">
-              <img src="../assets/icons/olin.svg" class="footer-image d-inline">
-              <i class="fas fa-plus"></i>
+              <!-- <a target="_blank" href="https://www.olin.edu/"> -->
+                <img src="../assets/icons/olin.svg" class="footer-image d-inline">
+              <!-- </a> -->
+              <i class="fas fa-plus mx-4"></i>
               <img src="../assets/icons/return_design.svg" class="footer-image d-inline">
             </div>
           </div>
