--- a/terms/index.html
+++ b/terms/index.html
@@ -108,7 +108,7 @@
                               </p>
                               <p class="card-text">
 
-                                Subjective content is less concrete and more open for personal interpretation - there’s often no "right" answer. This can be more difficult to critique for people new to the process or without a relationship with others involved in the critique, but critiquing subjective content is often the majority of what needs to be critiqued. Rather than measuring the work against clearly defined objective expectations the person delivering the crit must use existing elements in the work and their own reaction to the work to give helpful feedback to improve the work. 
+                                Subjective content is less concrete and more open for personal interpretation - there's often no "right" answer. This can be more difficult to critique for people new to the process or without a relationship with others involved in the critique, but critiquing subjective content is often the majority of what needs to be critiqued. Rather than measuring the work against clearly defined objective expectations the person delivering the crit must use existing elements in the work and their own reaction to the work to give helpful feedback to improve the work. 
                               </p>
                               <p class="card-text">
                                 
@@ -239,7 +239,7 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid footer py-4 bg-white shadow">
+    <div class="container-fluid footer mt-5 py-4 bg-white shadow">
       <div class="row">
         <div class="container">
           <div class="row py-1">
@@ -248,8 +248,10 @@
           </div>
           <div class="row py-2">
             <div class="col-12 d-flex flex-md-row flex-column align-items-center">
-              <img src="/assets/icons/olin.svg" class="footer-image d-inline">
-              <i class="fas fa-plus"></i>
+              <!-- <a target="_blank" href="https://www.olin.edu/"> -->
+                <img src="../assets/icons/olin.svg" class="footer-image d-inline">
+              <!-- </a> -->
+              <i class="fas fa-plus mx-4"></i>
               <img src="/assets/icons/return_design.svg" class="footer-image d-inline">
             </div>
           </div>
