--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                   <div class="card-body col-12 col-md-9">
                     <h2 class="card-title mx-0 ">Critique Vocab</h2>
                     <p class="card-text text-uppercase">A common language to help macck the process of critique easier + more effective</p>
-                    <a href="/terms" class="btn">Click to View or Download</a>
+                    <a href="/terms" class="btn mt-5">Click to View or Download</a>
                   </div>
                 </div>
 
@@ -99,8 +99,8 @@
               <div class="card red shadow p-3 mb-5 bg-danger">
                 <img src="/assets/icons/arrow.svg" class="card-img-top">
                 <div class="card-body">
-                  <h2 class="card-title mx-0">Critique Intro Guide</h2>
-                  <a href="/guide" class="btn">Click to View or Download</a>
+                  <h2 class="card-title mx-0">How to Give a Critique</h2>
+                  <a href="/give" class="btn mt-5">Click to View or Download</a>
                 </div>
               </div>
             </div>
@@ -109,7 +109,7 @@
                 <img src="/assets/icons/plus.svg" class="card-img-top">
                 <div class="card-body">
                   <h2 class="card-title mx-0">How to Recieve a Critique</h2>
-                  <a href="/receive" class="btn">Click to View or Download</a>
+                  <a href="/receive" class="btn mt-5">Click to View or Download</a>
                 </div>
               </div>
             </div>
@@ -138,7 +138,7 @@
                   <div class="card-body col-12 col-md-9">
                     <h2 class="card-title mx-0">Critique Intro Guide</h2>
                     <p class="card-text text-uppercase">How to introduce and support critique in your classroom or workplace</p>
-                    <a href="/guide" class="btn">Click to View or Download</a>
+                    <a href="/guide" class="btn mt-5">Click to View or Download</a>
                   </div>
                 </div>
               </div>
@@ -147,7 +147,7 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid footer py-4 bg-white shadow">
+    <div class="container-fluid footer mt-5 py-4 bg-white shadow">
       <div class="row">
         <div class="container">
           <div class="row py-1">
@@ -156,9 +156,12 @@
           </div>
           <div class="row py-2">
             <div class="col-12 d-flex flex-md-row flex-column align-items-center">
-              <img src="/assets/icons/olin.svg" class="footer-image d-inline">
-              <i class="fas fa-plus"></i>
-              <img src="/assets/icons/return_design.svg" class="footer-image d-inline">
+              <!-- <a target="_blank" href="https://www.olin.edu/">
+              </a> -->
+              <img src="/assets/icons/olin.svg" class="footer-image d-inline"/>
+
+              <i class="fas fa-plus mx-4"></i>
+              <img src="/assets/icons/return_design.svg" class="footer-image d-inline"/>
             </div>
           </div>
         </div>
